Add the react ppsp to the show user page

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,6 +13,18 @@ $btn-add-size: 25px;
   }
 }
 
+.btn-blue-ext {
+  padding: 4px 8px;
+  border-radius: 8px;
+  border: $blue solid 0.5px;
+  color: black;
+  &:hover {
+    border: $blue-dark solid 0.5px;
+    text-decoration: none;
+    color: black;
+  }
+}
+
 .btn-orange {
   padding: 8px 16px;
   border-radius: 8px;
@@ -38,7 +50,7 @@ $btn-add-size: 25px;
   }
 }
 
-.btn-add{
+.btn-round{
   cursor: pointer;
   position: relative;
   border: 0.1px solid $orange;
