--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -25,7 +25,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_moa_id">MOA <abbr title="required">*</abbr></label>
               <% if policy(Moa).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalMoa">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalMoa">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -38,7 +38,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_moe_id">MOE <abbr title="required">*</abbr></label>
               <% if policy(Moe).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalMoe">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalMoe">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -89,7 +89,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_regional_committee_id">Comité régional de l'OPPBTP <abbr title="required">*</abbr></label>
               <% if policy(RegionalCommittee).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalRegionalCommittee">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalRegionalCommittee">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -102,7 +102,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_pension_insurance_id">Caisse d'assurance retraite <abbr title="required">*</abbr></label>
               <% if policy(PensionInsurance).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalPensionInsurance">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalPensionInsurance">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -115,7 +115,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_direcct_id">DIRECCT <abbr title="required">*</abbr></label>
               <% if policy(Direcct).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalDirecct">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalDirecct">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -128,7 +128,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_work_medecine_id">Médecine du travail <abbr title="required">*</abbr></label>
               <% if policy(WorkMedecine).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalWorkMedecine">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalWorkMedecine">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -141,7 +141,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_demining_id">Centre de déminage <abbr title="required">*</abbr></label>
               <% if policy(Demining).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalDemining">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalDemining">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -154,7 +154,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_sos_hand_id">Centre SOS Mains et Doigts<abbr title="required">*</abbr></label>
               <% if policy(SosHand).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalSosHand">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalSosHand">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -167,7 +167,7 @@
             <div class="d-flex align-items-start">
               <label class="select required" for="ppsp_anti_poison_id">Centre anti-poison <abbr title="required">*</abbr></label>
               <% if policy(AntiPoison).new? %>
-                <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalAntiPoison">
+                <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalAntiPoison">
                   <i class="fas fa-plus"></i>
                 </button>
               <% end %>
@@ -181,7 +181,7 @@
           <div class="d-flex align-items-start">
             <label class="select required" for="ppsp_hospital_id">Hôpital le plus proche <abbr title="required">*</abbr></label>
             <% if policy(Hospital).new? %>
-              <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalHospital">
+              <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalHospital">
                 <i class="fas fa-plus"></i>
               </button>
             <% end %>
@@ -194,7 +194,7 @@
           <div class="d-flex align-items-start">
             <label class="select required" for="ppsp_security_coordinator_id">Coordinateur sécurité</label>
             <% if policy(SecurityCoordinator).new? %>
-              <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalSecurityCoordinator">
+              <button type="button" class="btn-round btn-fill" data-toggle="modal" data-target="#ModalSecurityCoordinator">
                 <i class="fas fa-plus"></i>
               </button>
             <% end %>
