--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,13 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-size: 24px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+
 body {
   background-color: $gray-light;
 }
