--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,20 @@
-<div class="d-flex flex-column align-items-center">
-  <p><%= @user.first_name %></p>
-  <p><%= @user.last_name %></p>
-  <p><%= @user.company.name %></p>
-  <% if @user == current_user %>
-    <p>
-      <%= @user.admin ? "Votre compte est configuré en tant qu'Admin" : "Votre compte n'est pas un compte admin, merci de contacter le support si vous devez bénéficier d'un compte admin" %>
-    </p>
-  <% end %>
-  <% if policy(@user).edit? %>
-    <%= link_to "Éditer les informations", edit_user_path(@user), class: 'btn-blue-ext' %>
-  <% end %>
-  <h2 class="mt-4"><%= @user == current_user ? 'Vos PPSPS' : "Les PPSP de #{@user.first_name}" %>
-  <div id="ppsps-react" class="show-user" data-current=<%= current_user.id %> data-usershow=<%= @user.id %>></div>
+<div class="container">
+  <h1><%= @user == current_user ? "Bonjour #{current_user.first_name}" : "La page de #{@user.first_name}" %></h1>
+  <div class="d-flex flex-column align-items-center">
+    <div class="profile">
+      <h2><%= @user == current_user ? "Vos infos" : "Les infos de #{@user.first_name}" %></h2>
+      <p>Nom : <i><%= @user.first_name %> <%= @user.last_name %></i></p>
+      <p>Entreprise : <i><%= @user.company.name %></i></p>
+      <% if @user == current_user %>
+        <p>
+          <%= @user.admin ? "Votre compte est configuré en tant qu'Admin" : "Votre compte n'est pas un compte admin, merci de contacter le support si vous devez bénéficier d'un compte admin" %>
+        </p>
+      <% end %>
+      <% if policy(@user).edit? %>
+        <%= link_to "Éditer les informations", edit_user_path(@user), class: 'btn-blue-ext' %>
+      <% end %>
+    </div>
+    <h2 class="mt-4"><%= @user == current_user ? 'Vos PPSPS' : "Les PPSP de #{@user.first_name}" %>
+    <div id="ppsps-react" class="show-user" data-current=<%= current_user.id %> data-usershow=<%= @user.id %>></div>
+  </div>
 </div>
