Correct button => not link

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,23 @@
   background-color: $gray-light;
   margin-bottom: 20px;
   border-bottom: solid 0.5px #cfcfcf;
+  // Utile pour décaler un peu le texte et le centrer par rapport à la flexbox de la navbar
+  // comme il y a plusieurs éléments parfois celui du centre n'est pas totalement centré
+  .navbar-text {
+  position: relative;
+  left: 5%;
+  transform: translateX(-5%);
+    .navbar-company {
+      font-weight: 700;
+      font-size: 20px;
+      text-align: center;
+    }
+    .navbar-user {
+      font-weight: 400;
+      font-size: 14px;
+      text-align: center;
+    }
+  }
 }
 
 .navbar-ppsp .navbar-collapse {
@@ -11,16 +28,4 @@
 
 .navbar-ppsp .navbar-brand img {
   width: 40px;
-}
-
-.navbar-company {
-  font-weight: 700;
-  font-size: 20px;
-  text-align: center;
-}
-
-.navbar-user {
-  font-weight: 400;
-  font-size: 14px;
-  text-align: center;
 }
