--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,8 +13,8 @@
       </div>
     </div>
     <div class="d-flex align-items-center">
-      <%= button_to "Mon profil", user_path(current_user), class: 'btn-blue-ext mr-2', data: { turbolinks: false } %>
-      <%= button_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "btn-blue"%>
+      <%= link_to "Mon profil", user_path(current_user), class: 'btn-blue-ext mr-2', data: { turbolinks: false } %>
+      <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: "btn-blue"%>
     </div>
   <% else %>
     <a href="mailto:alexis.lenoir60@gmail.com" class="btn-orange">Demander une démo</a>
