--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,6 +3,7 @@
     <%= simple_form_for @user do |f| %>
       <%= f.input :first_name, label: "Prénom" %>
       <%= f.input :last_name, label: "Nom de famille" %>
+      <%= f.input :email, label: "Email" %>
       <%= f.submit "Ëditer les informations", class: 'btn-blue' %>
     <% end %>
     <%= link_to "Revenir au profil", user_path(@user), class: 'link', data: { turbolinks: false } %>
