--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,20 @@
 <div class="container">
   <h1><%= @user == current_user ? "Bonjour #{current_user.first_name}" : "La page de #{@user.first_name}" %></h1>
   <div class="d-flex flex-column align-items-center">
-    <div class="profile">
+    <div class="card-profile">
       <%= "<h2>Vos infos</h2>".html_safe if @user == current_user %>
-      <p>Nom : <i><%= @user.first_name %> <%= @user.last_name %></i></p>
-      <p>Entreprise : <i><%= @user.company.name %></i></p>
+      <p><u>Nom</u> : <%= @user.first_name %> <%= @user.last_name %></p>
+      <p><u>Email</u> : <%= @user.email %></p>
+      <p><u>Entreprise</u> : <%= @user.company.name %></p>
       <% if @user == current_user %>
         <p>
-          <%= @user.admin ? "Votre compte est configuré en tant qu'Admin" : "Votre compte n'est pas un compte admin, merci de contacter le support si vous devez bénéficier d'un compte admin" %>
+          <%= @user.admin ? "Votre compte est configuré en tant qu'<b>Admin</b>".html_safe : "Votre compte n'est <b>pas</b> un compte <b>Admin<b>".html_safe %>
         </p>
       <% end %>
       <% if policy(@user).edit? %>
-        <%= link_to "Éditer les informations", edit_user_path(@user), class: 'btn-blue-ext' %>
+        <div class="d-flex justify-content-center">
+          <%= link_to "Éditer les informations", edit_user_path(@user), class: 'btn-blue-ext' %>
+        </div>
       <% end %>
     </div>
     <h2><%= @user == current_user ? 'Vos PPSPS' : "Les PPSP de #{@user.first_name}" %></h2>
