--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <p><u>Entreprise</u> : <%= @user.company.name %></p>
       <% if @user == current_user %>
         <p>
-          <%= @user.admin ? "Votre compte est configuré en tant qu'<b>Admin</b>".html_safe : "Votre compte n'est <b>pas</b> un compte <b>Admin<b>".html_safe %>
+          <%= @user.admin ? "Votre compte est configuré en tant qu'<b>Admin</b>".html_safe : "Votre compte n'est <b>pas</b> un compte <b>Admin</b>".html_safe %>
         </p>
       <% end %>
       <% if policy(@user).edit? %>
