Ajouter une vidéo sur la home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
       <h1>Possibilité d'accéder à tous les documents créés par son entreprise avec un système de recherche rapide</h1>
     </div>
     <div class="col-6">
-      <%= image_tag('home_PDF.png', width: 400, height: 300) %>
+      <%= video_tag('video-ppsp.mp4', size: "800x450", autoplay: true, loop: true, muted: 'muted') %>
     </div>
   </div>
   <div class="row align-items-center">
