Add infinite scroll in the PPSPS list

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <div class="container-home">
   <h1>Créer votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité avec</h1>
+  <h1 style='font-size: 48px'>Obras</h1>
   <%= image_tag('logo-ppsp.png') %>
   <div class="row align-items-center">
     <div class="col-6">
