Start reform db

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,3 +12,10 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.container-database {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2em;
+  justify-content: center;
+}
