--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(Hospital).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalHospital">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalHospital">
     Ajouter un Hôpital
   </button>
 <% end %>
