--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,7 +3,6 @@
 }
 
 .card-ppsp {
-  z-index: -1;
   width: 300px;
   min-height: 180px;
   padding: 10px;
@@ -44,7 +43,6 @@
     }
   } 
   .card-ppsp-edit {
-    z-index: 9999;
     position: relative;
     float: right;
     border: none;
@@ -63,8 +61,6 @@
     }
   }
 }
-
-
 
 .card-info {
   box-shadow:  2px 3px 10px 2px $blue-dark-shadow;
@@ -107,6 +103,47 @@
   margin-bottom: 3em;
 }
 
+.card-database {
+  width: 300px;
+  padding: 4px;
+  color: black;
+  margin: 6px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 1px 1px 2px 2px $blue-light;
+  &:hover {
+    box-shadow: 1px 1px 2px 2px $blue-dark;
+  }
+  .card-db-delete {
+    border: none;
+    font-size: 18px;
+    color: $blue-dark;
+    font-weight: 700;
+    margin-left: 6px;
+    &:hover{
+      color: black;
+      text-decoration: none;
+    }
+  }
+  .card-db-edit {
+    border: none;
+    font-size: 18px;
+    color: $blue-dark;
+    font-weight: 700;
+    &:hover{
+      color: black;
+      text-decoration: none;
+    }
+  }
+  .card-db-header {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+
 .active {
   background-color: $blue-dark-shadow;
 }
+
