--- a/app/views/anti_poisons/index.html.erb
+++ b/app/views/anti_poisons/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(AntiPoison).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalAntiPoison">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalAntiPoison">
     Ajouter un Centre anti poison
   </button>
 <% end %>
