--- a/app/views/deminings/index.html.erb
+++ b/app/views/deminings/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(Demining).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalDemining">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalDemining">
     Ajouter un centre de déminage
   </button>
 <% end %>
