--- a/app/views/direccts/index.html.erb
+++ b/app/views/direccts/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(Direcct).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalDirecct">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalDirecct">
     Ajouter un DIRECCT
   </button>
 <% end %>
