--- a/app/views/moas/index.html.erb
+++ b/app/views/moas/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(Moa).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalMoa">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalMoa">
     Ajouter un Maître d'ouvrage
   </button>
 <% end %>
