--- a/app/views/moes/index.html.erb
+++ b/app/views/moes/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(Moe).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalMoe">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalMoe">
     Ajouter un Maître d'oeuvre
   </button>
 <% end %>
