--- a/app/views/pension_insurances/index.html.erb
+++ b/app/views/pension_insurances/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(PensionInsurance).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalPensionInsurance">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalPensionInsurance">
     Ajouter une Caisse d'assurance
   </button>
 <% end %>
