--- a/app/views/regional_committees/index.html.erb
+++ b/app/views/regional_committees/index.html.erb
@@ -1,5 +1,5 @@
 <% if policy(RegionalCommittee).new? %>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalRegionalCommittee">
+  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalRegionalCommittee">
     Ajouter un Comité Régional
   </button>
 <% end %>
