--- a/app/views/sos_hands/_list_sos_hands.html.erb
+++ b/app/views/sos_hands/_list_sos_hands.html.erb
@@ -1,7 +1,19 @@
 <% @sos_hands.each do |sos_hand| %>
   <div class="card-database">
-    <%= link_to sos_hand, sos_hand_path(sos_hand) %>
-    <%= link_to "Edit", edit_sos_hand_path(sos_hand) %>
-    <%= link_to "x", sos_hand_path(sos_hand), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", sos_hand_path(sos_hand), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= sos_hand.name %>
+    </div>
+    <div class="db-element">
+      <%= sos_hand.address %>
+    </div>
+    <div class="db-element">
+      <%= sos_hand.phone %>
+    </div>
   </div>
 <% end %>
