--- a/app/views/sos_hands/create.js.erb
+++ b/app/views/sos_hands/create.js.erb
@@ -5,8 +5,8 @@ $(document).ready(function() {
   if (document.getElementById("ppsp_sos_hand_id")) {
     document.getElementById("ppsp_sos_hand_id").innerHTML = "<%= j(render 'form_field_sos_hand') %>";
   }
-  if (document.querySelector(".list-database")) {
-    document.querySelector(".list-database").innerHTML = "<%= j(render 'list_sos_hands') %>";
+  if (document.querySelector(".container-database")) {
+    document.querySelector(".container-database").innerHTML = "<%= j(render 'list_sos_hands') %>";
   }
 })
 
