--- a/app/views/work_medecines/_list_work_medecines.html.erb
+++ b/app/views/work_medecines/_list_work_medecines.html.erb
@@ -1,7 +1,19 @@
 <% @work_medecines.each do |work_medecine| %>
   <div class="card-database">
-    <%= link_to work_medecine, work_medecine_path(work_medecine) %>
-    <%= link_to "Edit", edit_work_medecine_path(work_medecine) %>
-    <%= link_to "x", work_medecine_path(work_medecine), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", work_medecine_path(work_medecine), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= work_medecine.address %>
+    </div>
+    <div class="db-element">
+      <%= work_medecine.phone %>
+    </div>
+    <div class="db-element">
+      <%= work_medecine.fax %>
+    </div>
   </div>
 <% end %>
