--- a/app/views/anti_poisons/_list_anti_poisons.html.erb
+++ b/app/views/anti_poisons/_list_anti_poisons.html.erb
@@ -1,7 +1,19 @@
-<% @anti_poisons.each do |poison| %>
+<% @anti_poisons.each do |anti_poison| %>
   <div class="card-database">
-    <%= link_to poison.name, anti_poison_path(poison) %>
-    <%= link_to "Edit", edit_anti_poison_path(poison) %>
-    <%= link_to "x", anti_poison_path(poison), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", anti_poison_path(anti_poison), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= anti_poison.name %>
+    </div>
+    <div class="db-element">
+      <%= anti_poison.address %>
+    </div>
+    <div class="db-element">
+      <%= anti_poison.phone %>
+    </div>
   </div>
 <% end %>
