--- a/app/views/anti_poisons/edit.html.erb
+++ b/app/views/anti_poisons/edit.html.erb
@@ -1,6 +1,5 @@
-<%= simple_form_for @anti_poison do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone %>
-  <%= f.submit %>
-<% end %>
+<div class="row">
+  <div class="col-6 offset-3">
+    <%= render 'form' %>
+  </div>
+</div>
