--- a/app/views/hospitals/_list_hospitals.html.erb
+++ b/app/views/hospitals/_list_hospitals.html.erb
@@ -1,7 +1,19 @@
 <% @hospitals.each do |hospital| %>
   <div class="card-database">
-    <%= link_to hospital, hospital_path(hospital) %>
-    <%= link_to "Edit", edit_hospital_path(hospital) %>
-    <%= link_to "x", hospital_path(hospital), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_hospital_path(hospital), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", hospital_path(hospital), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= hospital.name %>
+    </div>
+    <div class="db-element">
+      <%= hospital.address %>
+    </div>
+    <div class="db-element">
+      <%= hospital.phone %>
+    </div>
   </div>
 <% end %>
