--- a/app/views/moas/_list_moas.html.erb
+++ b/app/views/moas/_list_moas.html.erb
@@ -1,7 +1,25 @@
 <% @moas.each do |moa| %>
   <div class="card-database">
-    <%= link_to moa, moa_path(moa) %>
-    <%= link_to "Edit", edit_moa_path(moa) %>
-    <%= link_to "x", moa_path(moa), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_moa_path(moa), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", moa_path(moa), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= moa.name %>
+    </div>
+    <div class="db-element">
+      <%= moa.address %>
+    </div>
+    <div class="db-element">
+      <%= moa.representative %>
+    </div>
+    <div class="db-element">
+      <%= moa.phone %>
+    </div>
+    <div class="db-element">
+      <%= moa.email %>
+    </div>
   </div>
 <% end %>
