--- a/app/views/moes/create.js.erb
+++ b/app/views/moes/create.js.erb
@@ -5,8 +5,8 @@ $(document).ready(function() {
   if (document.getElementById("ppsp_moe_id")) {
     document.getElementById("ppsp_moe_id").innerHTML = "<%= j(render 'form_field_moe') %>";
   }
-  if (document.querySelector(".list-database")) {
-    document.querySelector(".list-database").innerHTML = "<%= j(render 'list_moes') %>";
+  if (document.querySelector(".container-database")) {
+    document.querySelector(".container-database").innerHTML = "<%= j(render 'list_moes') %>";
   }
 })
 
