--- a/app/views/pension_insurances/_list_pension_insurances.html.erb
+++ b/app/views/pension_insurances/_list_pension_insurances.html.erb
@@ -1,7 +1,19 @@
 <% @pension_insurances.each do |pension_insurance| %>
   <div class="card-database">
-    <%= link_to pension_insurance, pension_insurance_path(pension_insurance) %>
-    <%= link_to "Edit", edit_pension_insurance_path(pension_insurance) %>
-    <%= link_to "x", pension_insurance_path(pension_insurance), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", pension_insurance_path(pension_insurance), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= pension_insurance.address %>
+    </div>
+    <div class="db-element">
+      <%= pension_insurance.phone %>
+    </div>
+    <div class="db-element">
+      <%= pension_insurance.fax %>
+    </div>
   </div>
 <% end %>
