--- a/app/views/regional_committees/_list_regional_committees.html.erb
+++ b/app/views/regional_committees/_list_regional_committees.html.erb
@@ -1,7 +1,22 @@
 <% @regional_committees.each do |regional_committee| %>
   <div class="card-database">
-    <%= link_to regional_committee, regional_committee_path(regional_committee) %>
-    <%= link_to "Edit", edit_regional_committee_path(regional_committee) %>
-    <%= link_to "x", regional_committee_path(regional_committee), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    <div class="card-db-header">
+      <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit", target: '_blank' do %>
+        <i class='fas fa-pencil-alt'></i>
+      <% end %>
+      <%= link_to "x", regional_committee_path(regional_committee), class: "card-db-delete", method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
+    </div>
+    <div class="db-element">
+      <%= regional_committee.name %>
+    </div>
+    <div class="db-element">
+      <%= regional_committee.address %>
+    </div>
+    <div class="db-element">
+      <%= regional_committee.phone %>
+    </div>
+    <div class="db-element">
+      <%= regional_committee.fax %>
+    </div>
   </div>
 <% end %>
