--- a/app/views/sos_hands/index.html.erb
+++ b/app/views/sos_hands/index.html.erb
@@ -1,16 +1,22 @@
-<% if policy(SosHand).new? %>
-  <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalSosHand">
-    Ajouter un centre SOS Mains et Doigts
-  </button>
-<% end %>
-<%# Modal Sos Hand %>
-<% if policy(SosHand).new? %>
-  <div class="modal fade" id="ModalSosHand" tabindex="-1" role="dialog" aria-labelledby="ModalSosHand" aria-hidden="true">
-    <%= render 'ppsps/modal_sos_hand' %>
+<div class="container">
+  <div class="link-db">
+    <%= link_to "Revenir aux bases de données", database_path %>
   </div>
-<% end %>
-<div class="container-database">
-  <% @sos_hands.each do |sos_hand| %>
+  <% if policy(SosHand).new? %>
+    <div>
+      <button type="button" class="btn-blue" data-toggle="modal" data-target="#ModalSosHand">
+        Ajouter un centre SOS Mains et Doigts
+      </button>
+    </div>
+  <% end %>
+  <%# Modal Sos Hand %>
+  <% if policy(SosHand).new? %>
+    <div class="modal fade" id="ModalSosHand" tabindex="-1" role="dialog" aria-labelledby="ModalSosHand" aria-hidden="true">
+      <%= render 'ppsps/modal_sos_hand' %>
+    </div>
+  <% end %>
+  <div class="container-database">
+    <% @sos_hands.each do |sos_hand| %>
       <div class="card-database">
         <div class="card-db-header">
           <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit", target: '_blank' do %>
@@ -29,4 +35,5 @@
         </div>
       </div>
     <% end %>
+  </div>
 </div>
