--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -8,6 +8,8 @@
 
 #loading {
   background-image: url('gif-loading.gif');
-  height: 100px;
+  height: 150px;
   width: 200px;
+  margin: auto;
+  display: none;
 }
