--- a/app/views/pension_insurances/_form.html.erb
+++ b/app/views/pension_insurances/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
-  <% if params[:action] == 'new' %>
+  <% if params[:action] == 'new' || params[:action] == 'index' %>
     <%= f.submit "Créer un caisse d'assurance retraite", class: 'btn-blue' %>
   <% else %>
     <%= f.submit "Modifier cette caisse d'assurance retraite", class: 'btn-blue' %>
