--- a/app/views/sos_hands/_form.html.erb
+++ b/app/views/sos_hands/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.input :name, label: 'Nom' %>
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
-  <% if params[:action] == 'new' %>
+  <% if params[:action] == 'new' || params[:action] == 'index' %>
     <%= f.submit 'Créer un centre', class: 'btn-blue' %>
   <% else %>
     <%= f.submit 'Modifier ce centre', class: 'btn-blue' %>
