Front on the info supp page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,13 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  font-size: 20px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+
 body {
   background-color: $gray-light;
 }
