--- a/app/views/subcontractors/create.js.erb
+++ b/app/views/subcontractors/create.js.erb
@@ -2,6 +2,6 @@ $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalSubcontractor").hide();
   $(".modal-open").css({overflow: 'scroll'});
-  $('#containerSubcontract')[0].innerHTML = "<%= escape_javascript(render 'subcontractors/container_subcontract') %>";
+  $('#cardSelect')[0].innerHTML = "<%= escape_javascript(render 'ppsps/info_supp_selected') %>";
 })
 
