--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -47,6 +47,7 @@ $btn-add-size: 25px;
     border: $orange-dark solid 0.5px;
     text-decoration: none;
     color: black;
+    cursor: pointer;
   }
 }
 
