--- a/app/views/subcontractors/_form.html.erb
+++ b/app/views/subcontractors/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :responsible_name, label: "Responsable" %>
   <%= f.input :responsible_phone, label: "Téléphone"%>
   <%= f.input :responsible_email, label: "Email" %>
-  <% if params[:action] == 'informations_supplementaires' %>
+  <% if params[:action] == 'informations_supplementaires' || params[:action] == 'create'  %>
     <%= f.submit 'Créer un sous-traitant', class: 'btn-blue' %>
   <% else %>
     <%= f.submit 'Modifier ce sous-traitant', class: 'btn-blue' %>
